--- a/SmartHome/app/src/main/AndroidManifest.xml
+++ b/SmartHome/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
         <activity
-            android:name=".DashBoard.HomeActivity"
+            android:name=".Splash.SplashActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -30,9 +30,9 @@
         </activity>
         <activity android:name=".MainActivity" />
         <activity android:name=".DashBoardActivity" />
-        <activity android:name=".LoginActivity" />
+        <activity android:name=".DashBoard.HomeActivity" />
         <activity android:name=".UpdateHomeActivity" />
-        <activity android:name=".Splash.SplashActivity" />
+        <activity android:name=".LoginActivity" />
         <activity android:name=".DashBoard.Settings.SettingsActivity" />
         <activity android:name=".DashBoard.Demo.DemoActivity" />
         <activity android:name=".CheckWifiActivity"></activity>
